--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -5,7 +5,7 @@ body {
   margin:0;
   padding:0;
   font-family: sans-serif;
-  background: linear-gradient(#39962f, #90d326);
+  background: #39962f;
 }
 
 .box {
