--- a/Client/src/components/Card/Card.module.css
+++ b/Client/src/components/Card/Card.module.css
@@ -1,8 +1,45 @@
 .image{
-    border-radius: 50%;
+    border-radius: 10%;
 }
 
-.fav{
+/* .fav{
     align-items: center;
     position: absolute;
+} */
+
+.box {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    width: 400px;
+    padding: 40px;
+    transform: translate(-50%, -50%);
+    background: rgba(0,0,0,.5);
+    box-sizing: border-box;
+    box-shadow: 0 15px 25px rgba(0,0,0,.6);
+    border-radius: 10px;
+}
+
+.nameChar {
+    color: #fff;
+}
+
+
+.btn{
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem;
+}
+
+.btn button{
+    margin-left: 1rem;
+    border-radius: 5rem;
+    margin-top: .5rem;
+    width: 3rem;
+    height: 2rem;
+    background: radial-gradient(rgb(84, 218, 70),rgb(57, 150, 47));
+    border: transparent;
+
+    overflow: hidden;
+    transition: 300ms;
 }
